# odas-project

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  init_db.py  pyproject.toml  wsgi.py
nginx/: nginx.conf
nginx/certs/: nginx.crt  nginx.key  nginx.key.encrypted
src/app/: __init__.py  models.py  routes.py  utils.py
src/app/static/css/: style.css
src/app/static/js/: app.js  auth.js  crypto.js  dashboard.js  utils.js
static/css/: style.css
static/js/: app.js  auth.js  crypto.js  dashboard.js  login.js  messaging.js  register.js  send.js  utils.js  validator.js
templates/: dashboard.html  inbox.html  login.html  main.html  register.html  send.html
templates/fragments/: dashboard.html  login.html  outbox.html  register.html  send.html
