[project]
name = "odas"
version = "0.1.0"
description = "System bezpiecznej wymiany wiadomości Zero Knowledge"
requires-python = ">= 3.11"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
odas = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.11"
flask = ">=3.0"
flask-sqlalchemy = "*"
psycopg2 = "*"
uwsgi = "*"
flask-talisman = "*"
flask-limiter = "*"
flask-wtf = "*"
argon2-cffi = ">=25.1.0,<26"
pyotp = "*"
python-dotenv = ">=1.2.1,<2"

[tool.pixi.tasks]
server = "uwsgi --master --http :5000 --wsgi-file wsgi.py --callable app --pythonpath src"
db-init = "python init_db.py"
